2007-01-31  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -sendEMailNotifications]): new method that
	returns the value of ud "SOGoAppointmentSendEMailNotifications"
	(iMIP/iTIP).
	([SOGoCalendarComponent
	-sendEMailUsingTemplateNamed:_pageNameforOldObject:_oldObjectandNewObject:_newObjecttoAttendees:_attendees]): method moved from SOGoAppointmentObject/SOGoTaskObject, replacing occurences of "appointment" to "object" in its name.

2007-01-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailListView.m ([UIxMailListView
	-defaultAction]): invoke "flushMailCaches" on [self clientObject]
	so that the mailbox cache is refreshed everytime the user presses
	on "get mail". I doubt a mailbox cache really is useful in general
	anyway.

2007-01-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoAuthenticator.m ([SOGoAuthenticator
	-userInContext:]): if the lookup is on "freebusy.ifb" and the
	username is "anonymous" the user is automatically set to
	"freebusy".

2007-01-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoAuthenticator.m ([SOGoAuthenticator
	-checkLogin:_loginpassword:_pwd]): authorize special "freebusy"
	user with password "freebusy".

	* SoObjects/Appointments/SOGoFreeBusyObject.m ([SOGoFreeBusyObject
	-contentAsString]): the default timerange is now 14 days before
	currentday and 1 month after.

2007-01-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-appendObject:objectwithBaseURL:baseURLtoREPORTResponse:r]):
	escape the record string in a way suitable with XML encoding.

2007-01-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SchedulerUI.js: fixed a bug where the
	calendar view would not be updated properly.

2007-01-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor