@@ -1,3 +1,13 @@
+2007-02-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* SoObjects/Contacts/SOGoContactLDAPFolder.m
+	([SOGoContactLDAPFolder -_searchAttributes]): retrieve "calFBURL"
+	from the server.
+
+	* SoObjects/Contacts/SOGoContactLDAPEntry.m ([SOGoContactLDAPEntry
+	-vCard]): put the LDAP "calFBURL" field in the vCard's "FBURL"
+	entry.
+
 2007-01-31  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* SoObjects/Appointments/SOGoCalendarComponent.m
